--- a/MathСalculator.WebUI/Web.config
+++ b/MathСalculator.WebUI/Web.config
@@ -18,6 +18,13 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <globalization
+       fileEncoding="utf-8"
+       requestEncoding="utf-8"
+       responseEncoding="utf-8"
+       culture="auto"
+       uiCulture="auto"
+    />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <authentication mode="Forms">
