--- a/MathСalculator.WebUI/MathСalculator.WebUI.csproj
+++ b/MathСalculator.WebUI/MathСalculator.WebUI.csproj
@@ -104,9 +104,8 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Content\offcanvas.css" />
-    <Content Include="Content\ssdsds.js" />
+    <Content Include="Content\simIter.css" />
     <Content Include="Content\StyleSheet1.css" />
-    <Content Include="Content\StyleSheet2.css" />
     <Content Include="Global.asax" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Content\bootstrap.css.map" />
@@ -126,6 +125,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\npm.js" />
+    <Content Include="Scripts\simIter.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
