--- a/MathСalculator.WebUI/MathСalculator.WebUI.csproj
+++ b/MathСalculator.WebUI/MathСalculator.WebUI.csproj
@@ -102,6 +102,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\fon1.jpg" />
     <Content Include="Content\font-awesome.min.css" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Content\I love math-762627.png" />
@@ -127,6 +128,7 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\ie-emulation-modes-warning.js" />
+    <Content Include="Scripts\imageScript.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
@@ -180,6 +182,8 @@
     <Content Include="Views\Methods\Gaus.Mobile.cshtml" />
     <Content Include="Views\Methods\Newton.Mobile.cshtml" />
     <Content Include="Views\Users\Login.Mobile.cshtml" />
+    <Content Include="Views\Users\Register.Mobile.cshtml" />
+    <Content Include="Views\Methods\Secants.Mobile.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
