--- a/MathСalculator.WebUI/packages.config
+++ b/MathСalculator.WebUI/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AppLimit.CloudComputing.SharpBox" version="1.2.0.542" targetFramework="net45" />
   <package id="DocX" version="1.0.0.13" targetFramework="net45" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
   <package id="info.lundin.math.dll" version="1.1" targetFramework="net45" />
@@ -10,4 +11,5 @@
   <package id="Microsoft.AspNet.WebPages" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.0.0" targetFramework="net45" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
+  <package id="WolframAPI" version="1.2" targetFramework="net45" />
 </packages>
