--- a/MathСalculator.Domain/packages.config
+++ b/MathСalculator.Domain/packages.config
@@ -3,4 +3,9 @@
   <package id="DocX" version="1.0.0.13" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.2" targetFramework="net45" />
   <package id="info.lundin.math.dll" version="1.1" targetFramework="net45" />
+  <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
+  <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net45" />
+  <package id="WolframAPI" version="1.2" targetFramework="net45" />
 </packages>
