add error 404 view

--- a/MathСalculator.WebUI/Web.config
+++ b/MathСalculator.WebUI/Web.config
@@ -37,8 +37,8 @@
         <add name="SimpleMembershipProvider" type="WebMatrix.WebData.SimpleMembershipProvider, WebMatrix.WebData" />
       </providers>
     </membership>
-    <customErrors mode="Off">
-      <error statusCode="404" redirect="~/Methods/Index" />
+    <customErrors mode="On">
+      <error statusCode="404" redirect="~/Methods/Error404" />
     </customErrors>
   </system.web>
   <entityFramework>
