--- a/MathСalculator.WebUI/MathСalculator.WebUI.csproj
+++ b/MathСalculator.WebUI/MathСalculator.WebUI.csproj
@@ -133,6 +133,7 @@
     <Content Include="Content\fon1.jpg" />
     <Content Include="Content\font-awesome.min.css" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Content\grapt.css" />
     <Content Include="Content\hq-wallpapers_ru_funny_13844_1920x1200.jpg" />
     <Content Include="Content\imafe3.jpg" />
     <Content Include="Content\jquery-1.10.2.min.js" />
@@ -234,6 +235,7 @@
     <Content Include="Views\Methods\Error404.Mobile.cshtml" />
     <Content Include="Views\Methods\Simpson.cshtml" />
     <Content Include="Views\Methods\Trapezoids.cshtml" />
+    <Content Include="Views\Methods\Graph.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
