--- a/MathСalculator.WebUI/Web.config
+++ b/MathСalculator.WebUI/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -6,49 +6,43 @@
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="MathCalculatorDB" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\MathCalculatorDB.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="MathCalculatorDB" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\MathCalculatorDB.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
-    <add key="webpages:Version" value="3.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="webpages:Version" value="3.0.0.0"/>
+    <add key="webpages:Enabled" value="false"/>
+    <add key="ClientValidationEnabled" value="true"/>
+    <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
   <system.web>
-    <globalization
-       fileEncoding="utf-8"
-       requestEncoding="utf-8"
-       responseEncoding="utf-8"
-       culture="auto"
-       uiCulture="auto"
-    />
-    <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
+    <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" culture="auto" uiCulture="auto"/>
+    <compilation debug="true" targetFramework="4.5"/>
+    <httpRuntime targetFramework="4.5"/>
     <authentication mode="Forms">
-      <forms loginUrl="~/Users/Login" timeout="2880" defaultUrl="~/Methods/Index" />
+      <forms loginUrl="~/Users/Login" timeout="2880" defaultUrl="~/Methods/Index"/>
     </authentication>
-    <roleManager enabled="true"></roleManager>
+    <roleManager enabled="true"/>
     <membership defaultProvider="SimpleMembershipProvider">
       <providers>
-        <clear />
-        <add name="SimpleMembershipProvider" type="WebMatrix.WebData.SimpleMembershipProvider, WebMatrix.WebData" />
+        <clear/>
+        <add name="SimpleMembershipProvider" type="WebMatrix.WebData.SimpleMembershipProvider, WebMatrix.WebData"/>
       </providers>
     </membership>
-    <customErrors mode="On">
-      <error statusCode="404" redirect="~/Methods/Error404" />
+    <customErrors mode="Off">
+      <error statusCode="404" redirect="~/Methods/Error404"/>
     </customErrors>
   </system.web>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="v11.0" />
+        <parameter value="v11.0"/>
       </parameters>
     </defaultConnectionFactory>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
 </configuration>
